post and get are done and db connected

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
     </dependency>
 
 
+
+
     <!-- https://mvnrepository.com/artifact/io.vertx/vertx-web -->
     <dependency>
       <groupId>io.vertx</groupId>
@@ -35,6 +37,52 @@
       <groupId>io.vertx</groupId>
       <artifactId>vertx-web-client</artifactId>
       <version>4.5.8</version>
+    </dependency>
+
+
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-sql-client</artifactId>
+      <version>4.5.8</version>
+    </dependency>
+
+    <!-- Vert.x MySQL Client -->
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-mysql-client</artifactId>
+      <version>4.5.8</version>
+    </dependency>
+
+
+    <!-- MySQL Connector Java -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
+
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.11</version>
+    </dependency>
+
+
+    <!-- Vert.x SQL Client -->
+
+
+    <!-- Vert.x JDBC Client -->
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-jdbc-client</artifactId>
+      <version>4.5.8</version>
+    </dependency>
+
+    <!-- MySQL JDBC Driver -->
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.28</version>
     </dependency>
 
 
