--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,12 @@
 
 
     <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-auth-jwt</artifactId>
+      <version>4.5.8</version>
+    </dependency>
+
+    <dependency>
 
       <groupId>io.vertx</groupId>
       <artifactId>vertx-mysql-client</artifactId>
